# rqalpha

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  1.py  AGENTS.md  CHANGELOG.rst  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  TODO.rst  babel.cfg  cash_test.py  happy.py  make.sh  market_analysis.ipynb  messages.pot  pyproject.toml  requirements-py2.txt  requirements-py34.txt  requirements.txt  requirements_dev.txt  result.pkl  rqalpha-script.py  setup.cfg  setup.py  tags  test.py  versioneer.py
.github/: issue_template.md
.ipynb_checkpoints/: market_analysis-checkpoint.ipynb
changelog/: 0.0.1.md  0.0.12.md  0.0.14.md  0.0.15.md  0.0.16.md  0.0.18.md  0.0.19.md  0.0.2.md  0.0.20.md  0.0.53.md  0.0.9.md
docs/: Makefile  README.rst  make.bat  requirements.txt
examples/: multi_rsi.py
my_tests/: main.py  strategy.py
notebooks/: run-rqalpha-in-ipython.ipynb
performance/: 000905_tracking.py  buy_and_hold_hs300.py  daily_adjust_hs300.py
proofs/: Causality.lean  Portfolio.lean
pyeasyga/: __init__.py  pyeasyga.py
rqalgoengine/: Strategy.py  __init__.py  account.py  api.py  const.py  domains.py  events.py  i18n.py  instruments.py  logger.py  strategy.py  strategy_executor.py  trading_env.py  trading_params.py
rqalpha/: .mod_config_template.yml  VERSION.txt  __init__.py  __main__.py  _version.py  account.py  api.py  cache_control.py  cli.py  cmd.py  config.yml  config_new.yml  config_template.yml  const.py  default_config.yml  environment.py  event_bus.py  events.py  execution_context.py  i18n.py  instruments.py  interface.py  logger.py  main.py  mod_config.yml  mod_config_template.yml  plot.py  scheduler.py  strategy.py  tags  trading_params.py
rqbacktest/: __init__.py  __main__.py  api.py  i18n.py  instruments.py  strategy.py  trading_params.py
tests/: fixture.py  test_adanos_sentiment_mod.py  test_algorithm.py  test_call_api.py  test_data_access.py  test_events.py  test_f_buy_and_hold.py  test_f_delivery.py  test_f_macd.py  test_f_macd_signal.py  test_f_mean_reverting.py  test_f_round_price.py  test_f_tick_size.py  test_s_buy_and_hold.py  test_s_dma.py  test_s_dual_thrust.py  test_s_golden_cross.py  test_s_open_deal_macd.py  test_s_pit_tax.py  test_s_scheduler.py  test_s_share_transform.py  test_s_tick_size.py  test_s_trading_days_a_year.py  test_s_turtle.py  test_s_turtle_signal.py  test_scheduler.py  test_sf_buy_and_hold.py  test_strategy.py  test_update_bundle.py  trade_cal.pkl  utils.py
(+2235 files in other folders)
