
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
name = rqalpha
version = 4.3.0

[versioneer]
VCS = git
style = pep440-ricequant
versionfile_source = rqalpha/_version.py
versionfile_build = rqalpha/_version.py
tag_prefix = release/
parentdir_prefix = rqalpha

